[Common] Fix css module issue, look at “https://stackoverflow.com/questions/53062306/css-modules-not-working-for-react-version-16-6-0”

--- a/app/src/containers/Home/styles.css
+++ b/app/src/containers/Home/styles.css
@@ -1,3 +1,7 @@
 .title {
   font-weight: bold;;
 }
+
+.title {
+  background: red;
+}
